# propertybasedtesting

./: .gitignore  AGENTS.md  ALIAS_FEASIBILITY_ANALYSIS.md  GEN_NAMESPACE_COMPARISON.md  README.md  SHRINK_TREE_TESTING_SUMMARY.md  TODO.md  property_derivation_prompt.md  propertyderivation.md  propertytest_checklist.md  proptestports.code-workspace  python-proptest-constraint-coverage-summary.md  python-proptest-list-shrinking-duplicates-analysis.md  python-proptest-shrink-tree-test-enhancement-plan.md  stateful_framework_analysis.md  subdomainexploration.md
cppproptest/: README.md  TODO.md  generator_named_params_plan.md
cppproptest/archive/: forAll_improvement_plan.md
examples/cpp/: CMakeLists.txt  json_proptest.cpp  sample_proptest.cpp  sample_stateful_test.cpp
lab/: README.md
lab/cppproptest/: CMakeLists.txt  README.md
lab/cppproptest/src/: poc_basic.cpp
lab/jsproptest/: README.md  package-lock.json  package.json
lab/jsproptest/scripts/: ensure-jsproptest-built.mjs
lab/jsproptest/src/: poc_basic.mjs
lab/python-proptest/: README.md  requirements.txt
lab/python-proptest/src/: poc_basic.py
properties/: 00_general_guidelines.md  01_algorithms_data_structures.md  02_reference_comparison.md  03_consistency.md  04_observability.md  05_resource_management.md  06_exception_safety.md  07_memory_safety.md  08_thread_safety.md  09_malfunction_tolerance.md  10_crash_tolerance.md  README.md  REQUIREMENTS.md  advanced_01_database_transactional.md  advanced_02_distributed_systems.md  advanced_03_concurrency_advanced.md  advanced_04_networking_protocols.md  advanced_05_security.md
properties/cap_theorem/: 01_consistency.md  02_availability.md  03_partition_tolerance.md  README.md
properties/concurrency_advanced/: 01_serializability.md  02_liveness.md  03_safety.md  04_wait_freedom.md  README.md
properties/database_transactional/: 01_atomicity.md  02_consistency.md  03_isolation.md  04_durability.md  README.md
properties/distributed_systems/: 01_eventual_consistency.md  02_causal_consistency.md  03_linearizability.md  README.md
properties/networking_protocols/: 01_reliability.md  02_ordering.md  03_congestion_control.md  04_timeout_handling.md  README.md
properties/security/: 01_authentication.md  02_authorization.md  03_confidentiality.md  04_integrity.md  README.md
python-proptest/: CODE_QUALITY_REPORT.md  COVERAGE_ANALYSIS.md  README.md  collection_shrinking_status.md  cppproptest_vs_python_list_shrinking.md  gen_list_shrink_tree_size3.md  gen_list_shrink_tree_structure.md  list_shrink_tree_structure.md  show_gen_list_shrink_tree.py  show_gen_list_shrink_tree_bounded.py  show_gen_list_shrink_tree_size3.py  show_list_shrink_tree.py  show_list_shrink_tree_detailed.py  tuple_shrinking_status.md
validation/: CPPPROPTEST_VS_PYTHON_FLATMAP.md  CPP_VALIDATION_RESULTS.md  CRITICAL_ANALYSIS_FLATMAP.md  README.md  VALIDATION_RESULTS.md
